<?xml version="1.0"?>
<package format="2">
  <name>chapter5_tutorials</name>
  <version>0.0.0</version>
  <description>The chapter5_tutorials</description>

  <maintainer email="wildenali@todo.todo">wildenali</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>


  <export>

  </export>
</package>
